# pysquared

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  boot.py  config.json  index.html  index.md  llms-full.txt  llms.txt  main.py  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml.bak  pyright.json  pysquared.code-workspace  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: build-firmware.yaml
.hypothesis/constants/: 04c99aa93e417d85  05301e82733a6035  08b5e886db543a14  0c9423422727b209  0d5891b25c12a6d8  15a507188a0b8d46  1809eb60a68fde81  184a72fbe2bc78e4  1ea20245ffe13d54  26dbd33601c3fd3b  2922c8076dc855f3  2a4b0fc376f088cd  2f59da51f55fbbb8  3183b6ce52e79486  37e970593aa7dc2d  3b634b4ef5c31a17  439b5c626c364763  46ab442c3ae28bd2  485c4d3637095b5f  48998446616940ed  4ab7b4abf71a5f0b  4b1c59c99d7d49a9  4b2040c50eeae5f0  4c0306eeb909068c  4e3ec54f4839ebf8  55293c50d5879946  55d35967890b651d  570821500120c200  5a2fa69db65cf25c  5d29a4cc48c8788c  5d633467c112e7c3  61e65f90dcb5a3b1  64e3b36afddc1a42  6698793967da8c35  6ab208003943e967  6b6533f95168ef30  6b653db4c0006e60  6e0c89d08819f78b  (+50 more)
adr/: device-load-switch-pattern.md  graceful-device-initialization-failure-handling.md  graceful-device-initialization-failure.md  safe-device-failure.md
api/: index.html  index.md
circuitpython-workspaces/: pyrightconfig.json
circuitpython-workspaces/flight-software/: pyproject.toml
circuitpython-workspaces/flight-software/examples/: README.md  watchdog_demo.py
circuitpython-workspaces/flight-software/src/pysquared/: cdh.py  hmac_auth.py  sleep_helper.py
circuitpython-workspaces/flight-software/src/pysquared/boot/: filesystem.py
circuitpython-workspaces/flight-software/src/pysquared/config/: config.py  jokes_config.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/light_sensor/manager/: veml6031x00.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/load_switch/manager/: loadswitch_manager.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/magnetorquer/: __init__.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/magnetorquer/manager/: __init__.py  proves_magnetorquer.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/radio/manager/: base.py  sx1280.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/radio/packetizer/: packet_manager.py
circuitpython-workspaces/flight-software/src/pysquared/hardware/temperature_sensor/manager/: tmp112.py
circuitpython-workspaces/flight-software/src/pysquared/nvm/: counter.py
circuitpython-workspaces/flight-software/src/pysquared/protos/: loadswitch.py  magnetorquer.py
contributing/: index.html  index.md
cpython-workspaces/: pyrightconfig.json
cpython-workspaces/flight-software-unit-tests/: pyproject.toml
cpython-workspaces/flight-software-unit-tests/src/: config.json  jokes.json  test_beacon.py  test_logger.py  test_watchdog.py
cpython-workspaces/flight-software-unit-tests/src/hardware/: test_digitalio.py
cpython-workspaces/flight-software-unit-tests/src/hardware/magnetometer/manager/: test_lis2mdl_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/: test_beacon.py  test_binary_encoder.py  test_cdh.py  test_config.py  test_hmac_auth.py  test_hmac_integration.py  test_jokes_config.py  test_logger.py  test_watchdog.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/boot/: test_filesystem.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/files/: config.test.json  jokes.test.json
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/: test_digitalio.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/light_sensor/manager/: test_veml6031x00_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/load_switch/manager/: test_loadswitch_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/magnetometer/manager/: test_lis2mdl_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/magnetorquer/manager/: test_proves_magnetorquer.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/radio/manager/: test_radio_base.py  test_rfm9x_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/radio/packetizer/: test_packet_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/sd_card/manager/: test_sd_card.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/hardware/temperature_sensor/manager/: test_tmp112_manager.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/nvm/: test_counter16.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/other/: other_test_config.py  other_test_jokes.py
cpython-workspaces/flight-software-unit-tests/src/unit-tests/rtc/manager/: test_microcontroller_manager.py  test_rv3028_manager.py
design-guide/: index.html  index.md
dev-guide/: index.html
dev-guide-linux/: index.html
dev-guide-macos/: index.html
dev-guide-windows/: index.html
docs/: contributing-linux.md  contributing-macos.md  contributing-windows.md  contributing.md  design-guide.md  dev-guide.md  frozen-modules.md  getting-started.md  radio-test.md
examples/: binary_encoding_demo.py  ota_test_script.py  ota_update_example.py
firmware/: .gitignore  EXAMPLE.md  Makefile  QUICKSTART.md  README.md  add_dependencies.py
frozen-modules/: index.html  index.md
getting-started/: index.html  index.md
lib/: adafruit_tca9548a.py  requirements.txt
license/: index.html  index.md
load_switch/: index.html
mocks/: rv3028.py
pysquared/: Big_Data.py  beacon.py  binary_encoder.py  boot.py  boot_functions.py  cdh.py  detumble.py  functions.py  logger.py  mkdocs.yml  packet_manager.py  packet_sender.py  power_health.py  pysquared.py  satellite.py  sd_card.py  sleep_helper.py  state_of_health.py  watchdog.py
radio-test/: index.html  index.md
search/: search_index.json
(+217 files in other folders)
