[project]
name = "pysquared"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pysquared-flight-software",
    "pysquared-flight-software-mocks",
    "pysquared-flight-software-unit-tests",
]

[tool.uv.sources]
pysquared-flight-software = { workspace = true }
pysquared-flight-software-mocks = { workspace = true }
pysquared-flight-software-unit-tests = { workspace = true }

[tool.uv.workspace]
members = [
    "circuitpython-workspaces/*",
    "cpython-workspaces/*",
]
