[project]
name = "pysquared"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pysquared-flight-software",
    "pysquared-flight-software-mocks",
    "pysquared-flight-software-unit-tests",
]

[dependency-groups]
docs = [
    "mkdocs-material==9.6.14",
    "mkdocstrings[python]==0.29.1",
    "mkdocs-section-index==0.3.10",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-minify-plugin==0.7.1",
    "mkdocs-llmstxt==0.2.0",
]

[tool.uv.sources]
pysquared-flight-software = { workspace = true }
pysquared-flight-software-mocks = { workspace = true }
pysquared-flight-software-unit-tests = { workspace = true }

[tool.uv.workspace]
members = [
    "circuitpython-workspaces/*",
    "cpython-workspaces/*",
]
exclude = [
    "circuitpython-workspaces/typeshed",
]
